--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,20 @@
  * user defined css
  */
 
+* {
+    border: 1px solid red !important;
+}
+
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+* {
+    font-family: 'Poppins', sans-serif;
+}
 img, embed, object, video {
      max-width: 100%;
 }
